examples/test/testpolicy14397.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14397
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key34: value31
      key17: value5
      key21: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value6
          key11: value42
          key33: value14
      podSelector:
        matchLabels:
          key10: value19
          key21: value32
